--- a/supersimple-dev-html-css course/twitter-box.css
+++ b/supersimple-dev-html-css course/twitter-box.css
@@ -12,31 +12,28 @@
  }
  .container
  { 
-    border-style: solid;;
     width: 600px;
     height: 100px;
  }
  .profile-image-container{
     width: 50px;
-    height: 50px;
     display: inline-block;
-    border-style: solid;
-    border-width: 1px;
     vertical-align: top;
-    margin-top: 10px;
-
+    margin-top:10px;
+    margin-right: 5px;
+   margin-left:0px;
  }
  .profile-image
  {
-    width:50px;
-    height: 60px;
-    border-radius:50px;
-    vertical-align: top;
+    width:40px;
+    border-radius:25px;
+    padding-left: 0px;
+    margin-left: 0px;
+
+
  }
  .profile-description{
     display: inline-block;
-    border-style: solid;
-    border-width: 1px;
  }
  .top{
     vertical-align: top;
@@ -53,15 +50,23 @@
     margin-right: 140px;
  }
  .dots{
-   vertical-align: middle;
+    width:20px;
+    vertical-align: middle;
     display:inline-block;
     font-weight: 200;
     padding-top: 0px;
+    margin-top: 0px;
+
+ }
+ .dots-image
+ {
+   width:15px;
+   vertical-align:top;
  }
  .mid{
     margin-top:0px;
     width:520px;
-    margin-bottom: 10px;
+    margin-bottom: 11px;
  }
  .middle-section-para{
     font-family: Arial, Helvetica, sans-serif;
@@ -71,7 +76,7 @@
    display: flex;
    justify-content: space-between;
    margin-top:0px;
-
  }
-
- 
+.comment-image,.replay-image,.like-image,.upload-image,.analytics-image{
+   width: 20px;
+}
