--- a/styles/header.css
+++ b/styles/header.css
@@ -6,18 +6,93 @@
    
 }
 .left-section{
-    background-color: lightblue;
-    width:150px;
+
+    display: flex;
+    align-items: center;
 
 }
 .middle-section{
-    background-color: lightpink;
+    
     flex:1;
     margin-left: 70px;
     margin-right: 35px;
     max-width: 500px;
+    display: flex;
+    align-items: center;
+}
+
+.hamburger-menu{
+    height: 24px;
+    margin-left: 24px;
+    margin-right:20px;
+    
+}
+.youtube-logo{
+    height: 20px;
+}
+.search-bar{
+    flex:1;
+    height: 36.5px;
+    padding-left: 10px;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(192, 192,192);
+    border-radius: 2px;
+    box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.15);
+    width: 0;
+}
+.sarch-bar::placeholder{
+    font-family: Roboto,Arial;
+    font-size:16px;
+    
+}
+.search-icon{
+    height: 25px;
+    margin-top:4px;
+}
+.search-button{
+    height: 40px;
+    width: 66px;
+    background-color: rgb(241, 241, 241);
+    border-style: solid;
+    border-width: 1px;
+    border-color:rgb(192, 192, 192);
+    margin-left: -1px;
+    margin-right: 10px;
+}
+.voice-search-button{
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+    border-style: none;
+    background-color: rgb(233, 232, 232);
+
+}
+.voice-search-icon{
+    height:24px;
+    margin-top: 4px;
+    
 }
 .right-section{
-    background-color: lightblue;
-    width:200px;
+    width:180px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 20px;
+    flex-shrink: 0;
+}
+.upload-icon{
+    height:24px;
+}
+.youtube-apps-icon{
+    height:24px;
+
+}
+.notifications-icon{
+    height: 24px;
+}
+.current-user-picture{
+    height:32px;
+    border-radius: 16px;
 }
