--- a/styles/header.css
+++ b/styles/header.css
@@ -3,17 +3,15 @@
     display: flex;
     flex-direction:row;
     justify-content: space-between;
-
-
     position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
+         top: 0px;
+         left: 0px;
+         right: 0px;
     background-color: white;
     border-bottom-width: 1px;
     border-bottom-style: solid;
-    border-bottom-color: grey;
-   
+    border-bottom-color: lightgrey;
+    z-index: 100;
 }
 .left-section{
 
@@ -59,7 +57,7 @@
 }
 .search-icon{
     height: 25px;
-    margin-top:4px;
+    
 }
 .search-button{
     height: 40px;
@@ -70,7 +68,53 @@
     border-color:rgb(192, 192, 192);
     margin-left: -1px;
     margin-right: 10px;
+        
 }
+.search-button,
+.voice-search-button,
+.upload-icon-container,
+.youtube-apps-icon-container,
+.notifications-icon-container
+{
+    position:relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip
+{
+    
+    font-family: robo,Arial;
+    background-color: rgb(117, 115, 115);
+    position: absolute;
+        bottom:-30px;
+
+    color:white;
+    padding-top:4px;
+    padding-bottom:4px;
+    padding-left:8px;
+    padding-right:8px;
+    border-radius:2px;
+    font-size:13px;
+    opacity:0;
+    transition:opacity 0.5;
+    pointer-events: none;
+    white-space: nowrap;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip
+{
+    opacity:1;
+}
+
 .voice-search-button{
     height: 40px;
     width: 40px;
@@ -81,7 +125,7 @@
 }
 .voice-search-icon{
     height:24px;
-    margin-top: 4px;
+    
     
 }
 .right-section{
@@ -101,6 +145,24 @@
 }
 .notifications-icon{
     height: 24px;
+    
+}
+.notifications-icon-container{
+    position: relative;
+}
+.notifications-count{
+    position: absolute;
+     top:-2px;
+     right:-5px;
+    background-color: rgb(204, 12, 12);
+    color:white;
+    font-family: Robot,arial;
+    font-size: 11px;
+    padding-left:5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom:2px;
+    border-radius:20px;
 }
 .current-user-picture{
     height:32px;
