--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -7,3 +7,23 @@
     background-color:white;
 
 }
+.sidebar-link{
+    
+    height: 74px; 
+    display: flex;
+    justify-content: center; /*for the flex-direction column the proerties justify-conten and align-items are just reversed */
+    align-items: center;
+    flex-direction: column;
+}
+.sidebar-link:hover{
+    background-color: rgb(232, 232, 232);
+}
+.sidebar-link img{
+    height: 26px;
+    margin-bottom:4px;
+
+}
+.sidebar-link div{
+    font-family: Roboto,Arial;
+    font-size:10px;
+}
