--- a/styles/video.css
+++ b/styles/video.css
@@ -3,7 +3,7 @@
 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 10px;
+    column-gap: 20px;
     row-gap: 30px;
 }
 
@@ -12,11 +12,17 @@
     margin-bottom: 0px;
 }
 
+.thumbnail-row{
+     position:relative;
+     margin-bottom:8px;
+     /* relative is to set the time button at the bottom of the videos     */
+}
 .video-title{
  margin-top: 0px;   
  font-size:14px;
  font-weight: 500;
  line-height:20px;
+ margin-bottom: 10px;
 
 }
 .video-info-grid{
@@ -27,6 +33,7 @@
 width:50px;
 margin-top: 10px;
 padding-right:5px;
+position:relative;
 }
 
 .video-info{
@@ -36,7 +43,7 @@ margin-top: 10px;
 
 }
 .profile-picture{
-width:40px;
+width:36px;
 border-radius:25px;
 
 }
@@ -49,4 +56,57 @@ margin-bottom:0px;
 margin-top: 5px;
 font-size: 12px;
 color: grey;
+}
+.video-time{
+    background-color: black;
+    color:white;
+    position: absolute;
+        bottom:8px;
+        right:5px;
+    font-family: Roboto,arial;
+    font-size: 12px;
+    font-weight:500;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-radius: 2px;    
+}
+.channel-picture-container{
+    position: relative;
+
+}
+.channel-picture-container .tooltip{
+    position: absolute;
+    display: flex;
+    width:250px;
+    align-items:center;
+     padding-top:15px;
+    background-color: white;
+    padding-left:20px;
+    box-shadow: 2px 1px 10px 2px rgb(198, 197, 197);
+    z-index: 100;
+    padding-bottom:15px;
+    border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+
+}
+.tooltip-image{
+    border-radius:40px;
+    margin-right:10px;
+}
+.tooltip-text{
+    font-family: Roboto,arial;
+    line-height: 26px;
+}
+.tooltip-name{
+    font-weight:700;
+    font-size:18px;
+}
+.tooltip-info{
+    color:grey;
+}
+.channel-picture-container:hover .tooltip{
+    opacity: 1;
 }
