--- a/styles/general.css
+++ b/styles/general.css
@@ -11,5 +11,8 @@ p{
 body{
     padding-top: 80px;
     margin: 0;
-    padding-left: 80px;
+    padding-left: 96px;
+    padding-bottom: 1000px;
+    padding-right: 24px;
+    background-color: rgb(245, 245, 245);
 }
