--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -5,6 +5,8 @@
     top:55px;
     width:72px;
     background-color:white;
+    z-index: 200;
+    padding-top:5px;
 
 }
 .sidebar-link{
@@ -17,6 +19,7 @@
 }
 .sidebar-link:hover{
     background-color: rgb(232, 232, 232);
+    cursor: pointer;
 }
 .sidebar-link img{
     height: 26px;
