--- a/styles/video.css
+++ b/styles/video.css
@@ -7,6 +7,28 @@
     row-gap: 30px;
 }
 
+@media (max-width:750px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width:751px) and (max-width:999px)
+{
+    .video-grid 
+    {
+    grid-template-columns: 1fr 1fr 1fr;
+}
+}
+
+@media (min-width:1000px) {
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr ;
+    }
+    
+}
+
+
 .thumbnail{
     width:100%;
     margin-bottom: 0px;
