--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,32 +1,62 @@
-.sidebar{
-    position: fixed;
-    left:0;
-    bottom:0;
-    top:55px;
-    width:72px;
-    background-color:white;
-    z-index: 200;
-    padding-top:5px;
-
-}
-.sidebar-link{
+@media (max-width:1200px)
+{
+    .sidebar{
+        position: fixed;
+        left:0;
+        bottom:0;
+        top:55px;
+        width:72px;
+        background-color:white;
+        z-index: 200;
+        padding-top:5px;
     
-    height: 74px; 
-    display: flex;
-    justify-content: center; /*for the flex-direction column the proerties justify-conten and align-items are just reversed */
-    align-items: center;
-    flex-direction: column;
+    }
+    .sidebar-link{
+        
+        height: 74px; 
+        display: flex;
+        justify-content: center; /*for the flex-direction column the proerties justify-conten and align-items are just reversed */
+        align-items: center;
+        flex-direction: column;
+    }
+    .sidebar-link:hover{
+        background-color: rgb(232, 232, 232);
+        cursor: pointer;
+    }
+    .sidebar-link img{
+        height: 26px;
+        margin-bottom:4px;
+    
+    }
+    .sidebar-link div{
+        font-family: Roboto,Arial;
+        font-size:10px;
+    }
 }
-.sidebar-link:hover{
-    background-color: rgb(232, 232, 232);
-    cursor: pointer;
-}
-.sidebar-link img{
-    height: 26px;
-    margin-bottom:4px;
 
-}
-.sidebar-link div{
-    font-family: Roboto,Arial;
-    font-size:10px;
+@media (min-width:1200.1px){
+    .sidebar{
+        width: 250px;
+        
+        position: fixed;
+            top:55px;
+            bottom:0;
+            left:0;
+        z-index: 200;
+        background-color: white;
+
+    }
+    
+    .sidebar-link{
+        display: flex;
+        height: 50px;
+        align-items: center;
+
+    }
+    .sidebar-link img{
+        height:30px;
+        margin-right: 25px;
+        margin-left:20px
+    }
+    
 }
