--- a/styles/video.css
+++ b/styles/video.css
@@ -1,10 +1,12 @@
 
 .video-grid
 {
+    font-family: Roboto,Arial;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 20px;
     row-gap: 30px;
+   
 }
 
 @media (max-width:750px){
@@ -85,13 +87,9 @@ color: grey;
     position: absolute;
         bottom:8px;
         right:5px;
-    font-family: Roboto,arial;
     font-size: 12px;
     font-weight:500;
-    padding-left: 4px;
-    padding-right: 4px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    padding: 4px;
     border-radius: 2px;    
 }
 .channel-picture-container{
@@ -131,4 +129,11 @@ color: grey;
 }
 .channel-picture:hover .tooltip{
     opacity: 1;
+}
+@media (min-width:1200.1px)
+{
+    .video-grid{
+        margin-left:180px;
+    
+}
 }
