--- a/pesonal-portfolio/portfolio-middle.css
+++ b/pesonal-portfolio/portfolio-middle.css
@@ -1,16 +1,33 @@
 .information{
   border:2px solid red;
-  width: 300px;
+  width: 400px;
   color:white;
   position: absolute;
-    top:150px;
+    top:200px;
     left:200px;
-  background-image: linear-gradient(to bottom ,rgb(6, 241, 245),rgb(11, 112, 228));
-  -webkit-background-clip: text;
-  background-clip:text;
-}
+   
+  }
 .first-line{
-  color:transparent;
   font-size: 20px;
   font-weight: 600;
+  color: whitesmoke;
+  margin-bottom:0px;
+}
+.hello-emogi{
+  color: yellow;
+}
+
+.second-line{
+
+  font-family: poppins;
+  font-size: 50px;
+  margin:0;
+  
+}
+.hireme-button{
+  background-image:linear-gradient(to top,rgb(26, 238, 160),rgb(242, 246, 10));
+  border:none;
+  width:130px;
+  height:60px;
+  
 }
