--- a/pesonal-portfolio/portfolio-bottom.css
+++ b/pesonal-portfolio/portfolio-bottom.css
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+body{
+  height: 3000px;
+}
+.footer{
 
-.bottom-header{
-
-  position: fixed;
-    bottom:0;
-    left:0;
-    right:0;
   justify-content: center;
 }
 .line{
@@ -13,7 +11,6 @@
   width: 100%;
   margin:0 10px ;
   display: block;
-  position: fixed;
   bottom:240px;
 }
 .my-skills{
@@ -70,11 +67,14 @@
   display: flex;
   justify-content: center;
   margin:0;
-  margin-top:-10px;
+  margin-top:5px;
   color:transparent;
 }
 .india-flag{
-  width:20px;
+  width:30px;
+  height: 30px;
   display: inline-block;
+  justify-content: center;
   margin-left:20px ;
+  margin-top:10px
 }
