--- a/pesonal-portfolio/portfolio-middle.css
+++ b/pesonal-portfolio/portfolio-middle.css
@@ -1,11 +1,23 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
+.middle-section{
+  display: flex;
+  align-items: center;
+  margin-top:200px;
+  margin-bottom: 300px;
+  justify-content: space-around;
+}
+
 .information{
-  border:2px solid red;
+
   width: 400px;
   color:white;
-  position: absolute;
-    top:200px;
-    left:200px;
-   
+  margin-top: 50px;
+  margin-left:10px;
+  margin-right: 100px;
   }
 .first-line{
   font-size: 20px;
@@ -25,9 +37,37 @@
   
 }
 .hireme-button{
-  background-image:linear-gradient(to top,rgb(26, 238, 160),rgb(242, 246, 10));
+  background-image:linear-gradient(to top,rgb(26, 238, 160),rgba(140, 246, 10, 0.849));
   border:none;
   width:130px;
   height:60px;
+  border-radius: 10px;
+  margin-top:20px;
   
 }
+.person-coding-container{
+  margin-left:-100px;
+}
+.top-container{
+  display: flex;
+  height:10px;
+  width:300px;
+  margin: 50px ;
+}
+.top-left>img{
+  width:100%;
+}
+.top-right>img{
+  width:100%;
+  margin-left:70px;
+}
+.bottom-container{
+  height:240px;
+  width:240px;
+  margin:0;
+}
+.bottom-container>img{
+  width: 100%;
+  margin-left:90px;
+}
+
