--- a/pesonal-portfolio/portfolio-top.css
+++ b/pesonal-portfolio/portfolio-top.css
@@ -2,11 +2,11 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body{
+  background-color: black;
   font-family: 'Montserrat Alternates', sans-serif;
 }
 .header{
-  display: flex;
- border:1px solid red;
+display: flex;
  position: fixed;
  top: 0;
  left: 0;
@@ -17,7 +17,7 @@ body{
 }
 .logo-image{
   width:50px;
-  height:50px
+  height:50px;
 
 }
 .left-section{
@@ -26,6 +26,7 @@ body{
   height: 50px;
   justify-content: space-between;
   align-items: center;
+  margin-left: 100px;
 }
 .name-text-container{
   width:200px;
@@ -44,7 +45,8 @@ body{
   display: flex;
   justify-content: space-between;
   align-items:center;
- width:500px; 
+  width:350px; 
+  margin-right:100px;
 }
 
 .info-buttons:hover{
@@ -69,9 +71,28 @@ body{
 .about-button{
   color: rgb(0, 174, 255);
 }
-.linked-in-logo{
-  width:40px;
-  height: 40px;
-  background-color: white;
-  margin-left:10px;
+.linked-in-button{
+  font-family:sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  padding-right: 5px;
+  margin-right: 0
 }
+.twitter-logo{
+  width:25px;
+}
+.github-logo{
+  padding-top: 5px;
+  width: 25px;
+  height:20px;
+
+}
+.profile-image{
+  width: 31px;
+}
+.profile-image:hover , .twitter-logo:hover ,.github-logo:hover{
+  border-bottom: 1px solid white;
+  cursor:pointer;
+}
+
