--- a/pesonal-portfolio/projects.css
+++ b/pesonal-portfolio/projects.css
@@ -1,16 +1,21 @@
-*{
-  color: white;
-  margin:0;
-}
+
 .projects-section{
-border:2px solid blue;
+  backdrop-filter: blur(100px);
+  background-image:url(resources/background.png);
+  background-size: 70% auto;
+  background-position: center;
+ 
 display: flex;
 justify-content: center;
+margin-bottom:400px;
+z-index: -1;
+margin-top: 20px;
 }
 
 .projects-heading{
   display: block;
-font-size:35px;
+font-size:40px;
+font-family: poppins;
 background-image: linear-gradient(to top ,rgb(16, 239, 243),rgb(11, 112, 228));
   -webkit-background-clip: text;
   background-clip:text;
@@ -19,15 +24,66 @@ text-align: center;
 
 }
 .projects-grid{
-  margin-top:50px;
+  margin-top:100px;
   display: grid;
-  grid-template-columns: 250px 250px;
+  grid-template-columns: 350px 350px;
   row-gap:50px;
   column-gap: 100px;
+  margin-bottom: 100px;
+ 
 
 }
-
+.project1-container{
+  box-shadow: -2px -2px 20px 6px rgba(98, 98, 98,0.5);
+  border:none;
+  border-radius:5px;
+  background-color: black;
+  color: whitesmoke;
+}
 .top-div{
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top:5px;
+}
+.project-name{
+  width:80vh;
+}
+.project-image{
+  width:10vh;
+  margin-right: 30px;
+  margin-left:20px;
+}
+.seperator{
+  border-bottom: 1px dotted rgb(172, 167, 167);
+  margin:0 20px;
+}
+.bottom-div>p{
+  width:240px;
+  margin:10px auto ;
+}
+.github-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.github-container>p{
+  width:200px;
+ 
+}
+.project-link-button{
+  background-color: black;
+  border:none;
+  width:20px;
+  height:25px;
+
+  text-align: center;
+}
+.project-img-link{
+  width: 20px;
+  height:20px;
+  border:none;
   
 }
+
