--- a/pesonal-portfolio/portfolio-top.css
+++ b/pesonal-portfolio/portfolio-top.css
@@ -14,6 +14,7 @@ display: flex;
  background-color: black;
  justify-content: space-between;
  align-items: center;
+ z-index: 2000;
 }
 .logo-image{
   width:50px;
